--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -28,6 +28,7 @@ jobs:
                     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
                     ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
                     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+                    TF_VAR_vm_admin_password: ${{ secrets.TF_VAR_VM_ADMIN_PASSWORD }}
 
 
 
