Adiciona terraform format

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -18,6 +18,9 @@ jobs:
             - name: Setup Terraform
               uses: hashicorp/setup-terraform@v3
 
+            - name: Terraform Format
+              run: terraform fmt -check -diff
+
             - name: Run init
               run: terraform init
 
