--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -71,5 +71,5 @@ jobs:
             run: |
               ansible --version
               ansible-galaxy collection list
-              ansible-playbook playbook.yml -i inventory.ini --private-key private_key.pem  --graph
+              ansible-playbook playbook.yml -i inventory.ini --private-key private_key.pem
             working-directory: ./ansible
